--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ hilt = "2.51.1"
 hiltNavigationCompose = "1.2.0"
 sqlDelight = "2.0.2"
 ksp = "2.0.21-1.0.28"
+supabase = "3.1.1"
 
 testRunner = "1.6.2"
 assertK = "0.26.1"
@@ -65,6 +66,12 @@ assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assert
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 test-runner = { module = "androidx.test:runner", version.ref = "testRunner" }
 test-rule = { group = "androidx.test", name = "rules", version.ref = "rules" }
+
+supabase-bom = { module = "io.github.jan-tennert.supabase:bom", version.ref = "supabase"}
+supabase-postgrest = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "supabase"}
+supabase-auth = { module = "io.github.jan-tennert.supabase:auth-kt", version.ref = "supabase"}
+supabase-realtime = { module = "io.github.jan-tennert.supabase:realtime-kt", version.ref = "supabase"}
+supabase-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "supabase"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
