--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -68,10 +68,9 @@ test-runner = { module = "androidx.test:runner", version.ref = "testRunner" }
 test-rule = { group = "androidx.test", name = "rules", version.ref = "rules" }
 
 supabase-bom = { module = "io.github.jan-tennert.supabase:bom", version.ref = "supabase"}
-supabase-postgrest = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "supabase"}
-supabase-auth = { module = "io.github.jan-tennert.supabase:auth-kt", version.ref = "supabase"}
-supabase-realtime = { module = "io.github.jan-tennert.supabase:realtime-kt", version.ref = "supabase"}
-supabase-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "supabase"}
+supabase-postgrest = { module = "io.github.jan-tennert.supabase:postgrest-kt"}
+supabase-auth = { module = "io.github.jan-tennert.supabase:auth-kt"}
+supabase-realtime = { module = "io.github.jan-tennert.supabase:realtime-kt"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
