--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,13 +9,18 @@ compose-material3 = "1.3.1"
 composeBom = "2024.12.01"
 navigationCompose = "2.8.5"
 activityCompose = "1.9.3"
-ktor = "2.3.11"
 hilt = "2.51.1"
 hiltNavigationCompose = "1.2.0"
-sqlDelight = "2.0.2"
 ksp = "2.0.21-1.0.28"
+
+#REMOTE
+ktor = "3.0.3"
 supabase = "3.1.1"
 
+#LOCAL
+sqlDelight = "2.0.2"
+
+#TEST
 testRunner = "1.6.2"
 assertK = "0.26.1"
 turbine = "0.7.0"
