--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,30 @@
 [versions]
 agp = "8.5.2"
-coilCompose = "2.6.0"
 kotlin = "2.0.21"
 kotlinDateTime = "0.5.0"
 junit = "4.13.2"
+ksp = "2.0.21-1.0.28"
+coil3 = "3.0.0-rc02"
+
+#COMPOSE
 compose = "1.7.6"
 compose-material3 = "1.3.1"
 composeBom = "2024.12.01"
 navigationCompose = "2.8.5"
 activityCompose = "1.9.3"
-hilt = "2.51.1"
+coilCompose = "2.6.0"
 hiltNavigationCompose = "1.2.0"
-ksp = "2.0.21-1.0.28"
 
 #REMOTE
 ktor = "3.0.3"
 supabase = "3.1.1"
 
+#INJECTION
+koin = "4.0.0"
+hilt = "2.51.1"
+
 #LOCAL
+room = "2.7.0-rc02"
 sqlDelight = "2.0.2"
 
 #TEST
@@ -29,7 +36,7 @@ rules = "1.6.1"
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-date-time = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinDateTime" }
-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+#coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -62,6 +69,18 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
+
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil3" }
+coil-compose-core = { module = "io.coil-kt.coil3:coil-compose-core", version.ref = "coil3" }
+coil-network-ktor2 = { module = "io.coil-kt.coil3:coil-network-ktor2", version.ref = "coil3" }
+coil-network-ktor3 = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil3" }
+coil-mp = { module = "io.coil-kt.coil3:coil", version.ref = "coil3" }
+
 sqldelight-android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelight" }
 sqldelight-native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelight" }
 sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
@@ -88,10 +107,18 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
+room = { id = "androidx.room", version.ref = "room" }
 
 [bundles]
 ktor = [
     "ktor-client-content-negotiation",
     "ktor-client-core",
     "ktor-serialization-kotlinx-json",
+]
+coil = [
+    "coil-compose",
+    "coil-compose-core",
+    "coil-network-ktor2",
+    "coil-network-ktor3",
+    "coil-mp"
 ]
