--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,8 @@
 [versions]
+android-compileSdk = "34"
+android-minSdk = "24"
+android-targetSdk = "34"
+
 agp = "8.5.2"
 kotlin = "2.0.21"
 kotlinDateTime = "0.5.0"
