--- a/.kotlin/metadata/kotlinTransformedCInteropMetadataLibraries/.shared-appleMain.cinteropLibraries.json
+++ b/.kotlin/metadata/kotlinTransformedCInteropMetadataLibraries/.shared-appleMain.cinteropLibraries.json
@@ -5,8 +5,8 @@
     "sourceSetName": "iosMain"
   },
   {
-    "moduleId": "org.jetbrains.compose.ui:ui-uikit:1.7.0-beta02",
-    "file": "C:\\Users\\kamil\\AndroidStudioProjects\\TabletopWarhammer\\.kotlin\\metadata\\kotlinTransformedCInteropMetadataLibraries\\org.jetbrains.compose.ui-ui-uikit-1.7.0-beta02-uikitMain-cinterop\\org.jetbrains.compose.ui_ui-uikit-cinterop-utils-aNVDjg.klib",
+    "moduleId": "org.jetbrains.compose.ui:ui-uikit:1.7.0",
+    "file": "C:\\Users\\kamil\\AndroidStudioProjects\\TabletopWarhammer\\.kotlin\\metadata\\kotlinTransformedCInteropMetadataLibraries\\org.jetbrains.compose.ui-ui-uikit-1.7.0-uikitMain-cinterop\\org.jetbrains.compose.ui_ui-uikit-cinterop-utils-aNVDjg.klib",
     "sourceSetName": "uikitMain"
   },
   {
